fix: body spacing

--- a/src/scss/prestashop/pages/_pages.scss
+++ b/src/scss/prestashop/pages/_pages.scss
@@ -1,7 +1,9 @@
 $component-name: "page";
 
 .#{$component-name} {
-  padding-bottom: 2rem;
+  &:not(body) {
+    padding-bottom: 2rem;
+  }
 
   &-header {
     margin-bottom: 2rem;
